CDOC2-137: SID signature parameters moved to session token payload. Session token is signed by well-known key. RP challenge is randomly generated and persisted with auth process
